--- a/src/index.html
+++ b/src/index.html
@@ -279,65 +279,55 @@
 	<!-- Industries detail cards -->
 	<div class="flex flex-col mb-12">
 		<div class="w-5/6 xl:w-full container-main mr-auto ml-auto md:grid md:grid-cols-2 lg:grid-cols-3 md:auto-rows-fr md:gap-8 mt-4">
-			<div class="flex-grab ml-auto mr-auto">
-				<a href="#">
-					<div class="card">
-						<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
-						<div class="px-6 py-4 bg-white industry">
-							<h4 class="">Lone Peak Hospital</h4>
-							<h5>Draper, UT</h5>
-							<p>Other details to Convey Scope.</p>
-						</div>
+			<div class="flex ml-auto mr-auto">
+				<div class="w-full card flex flex-col">
+					<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
+					<div class="px-6 py-4 bg-white industry">
+						<h4 class="">Lone Peak Hospital</h4>
+						<h5>Draper, UT</h5>
+						<p>Other details to Convey Scope.</p>
 					</div>
-				</a>
+				</div>
 			</div>
-			<div class="flex-grab ml-auto mr-auto">
-				<a href="#">
-					<div class="card">
-						<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
-						<div class="px-6 py-4 bg-white industry">
-							<h4 class="">Lone Peak Hospital</h4>
-							<h5>Draper, UT</h5>
-							<p>Other details to Convey Scope.</p>
-						</div>
+			<div class="flex ml-auto mr-auto">
+				<div class="w-full card flex flex-col">
+					<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
+					<div class="px-6 py-4 bg-white industry">
+						<h4 class="">Black Hills Corporation Headquarters</h4>
+						<h5>Rapid City, SD</h5>
+						<p>Other details to Convey Scope.</p>
 					</div>
-				</a>
+				</div>
 			</div>
-			<div class="flex-grab ml-auto mr-auto">
-				<a href="#">
-					<div class="card">
-						<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
-						<div class="px-6 py-4 bg-white industry">
-							<h4 class="">Lone Peak Hospital</h4>
-							<h5>Draper, UT</h5>
-							<p>Other details to Convey Scope.</p>
-						</div>
+			<div class="flex ml-auto mr-auto">
+				<div class="w-full card flex flex-col">
+					<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
+					<div class="px-6 py-4 bg-white industry">
+						<h4 class="">Lone Peak Hospital</h4>
+						<h5>Draper, UT</h5>
+						<p>Other details to Convey Scope.</p>
 					</div>
-				</a>
+				</div>
 			</div>
-			<div class="flex-grab ml-auto mr-auto">
-				<a href="#">
-					<div class="card">
-						<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
-						<div class="px-6 py-4 bg-white industry">
-							<h4 class="">Lone Peak Hospital</h4>
-							<h5>Draper, UT</h5>
-							<p>Other details to Convey Scope.</p>
-						</div>
+			<div class="flex ml-auto mr-auto">
+				<div class="w-full card flex flex-col">
+					<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
+					<div class="px-6 py-4 bg-white industry">
+						<h4 class="">Lone Peak Hospital</h4>
+						<h5>Draper, UT</h5>
+						<p>Other details to Convey Scope.</p>
 					</div>
-				</a>
+				</div>
 			</div>
-			<div class="flex-grab ml-auto mr-auto">
-				<a href="#">
-					<div class="card">
-						<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
-						<div class="px-6 py-4 bg-white industry">
-							<h4 class="">Lone Peak Hospital</h4>
-							<h5>Draper, UT</h5>
-							<p>Other details to Convey Scope.</p>
-						</div>
+			<div class="flex ml-auto mr-auto">
+				<div class="w-full card flex flex-col">
+					<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
+					<div class="px-6 py-4 bg-white industry">
+						<h4 class="">Lone Peak Hospital</h4>
+						<h5>Draper, UT</h5>
+						<p>Other details to Convey Scope.</p>
 					</div>
-				</a>
+				</div>
 			</div>
 		</div>
 		<div class="w-5/6 lg:my-8 container-main mr-auto ml-auto text-center">
